--- a/templates/index.html
+++ b/templates/index.html
@@ -5,25 +5,18 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>XYG Solution</title>
-    {% load static %}
+
+    
+       {% load static %}
+  
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
-    <script type="module" crossorigin src="/assets/index-C8W-xrgu.js"></script>
-    <!-- <link rel="stylesheet" crossorigin href="/assets/index-DrktOcUb.css"> -->
-
-    <link rel="stylesheet" href="{% static 'assets/index-DrktOcUb.css' %}">
-    <script type="module" src="{% static 'assets/index-C8W-xrgu.js' %}"></script>
-    <!-- <script type="module" src="{% static 'assets/index-DrktOcUb.js' %}"></script> -->
-   
-    
-    <style>
-      body {
-        padding: 20px;
-      }
-    </style>
-
+    <!-- <script type="module" crossorigin src="/assets/index-C8W-xrgu.js"></script> -->
+    <link rel="stylesheet" crossorigin href="{% static 'assets/index-DTCV7rvL.css' %}" />
+    <script type="module" crossorigin src="{% static 'assets/index-DLOhx9eL.js' %}"></script>
+    <!-- <link rel="stylesheet" href="{% static 'assets/index-DrktOcUb.css' %}" /> -->
   </head>
   <body>
    
